force-app/main/default/objects/GameQuestStepMonster__c/GameQuestStepMonster__c.object-meta.xml
<CustomObject>
    <label>Game Quest Step Monster</label>
    <nameField>
        <displayFormat>GQSM-{000000}</displayFormat>
        <label>Game Quest Step Monster Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Quest Step Monsters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>