force-app/main/default/objects/GameQuestStepMonster__c/fields/ExperiencePointsEarned__c.field-meta.xml
<CustomField>
    <fullName>ExperiencePointsEarned__c</fullName>
    <description>XP gained after defeating the Monster</description>
    <inlineHelpText>XP gained after defeating the Monster</inlineHelpText>
    <label>Experience Points Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>