force-app/main/default/objects/GameQuestStepMonster__c/fields/GameQuestStep__c.field-meta.xml
<CustomField>
    <fullName>GameQuestStep__c</fullName>
    <label>Game Quest Step</label>
    <referenceTo>GameQuestStep__c</referenceTo>
    <relationshipLabel>Game Quest Step Monsters</relationshipLabel>
    <relationshipName>GameQuestStepMonsters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>