force-app/main/default/objects/GameQuestStepMonster__c/fields/HitPoints__c.field-meta.xml
<CustomField>
    <fullName>HitPoints__c</fullName>
    <label>Hit Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>