force-app/main/default/objects/GameQuestStepMonster__c/fields/Monster__c.field-meta.xml
<CustomField>
    <fullName>Monster__c</fullName>
    <label>Monster</label>
    <referenceTo>Monster__c</referenceTo>
    <relationshipLabel>Game Quest Step Monsters</relationshipLabel>
    <relationshipName>GameQuestStepMonsters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>