force-app/main/default/objects/GameQuestStepMonster__c/fields/MonsterName__c.field-meta.xml
<CustomField>
    <fullName>MonsterName__c</fullName>
    <formula>Monster__r.Name &amp; &quot; (&quot; &amp; TEXT(HitPoints__c) &amp; &quot;HP)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monster Name</label>
    <type>Text</type>
</CustomField>